# cubik-hackathon

./: Anchor.toml  README.md
programs/cubik-hackathon/: Cargo.toml
programs/cubik-hackathon/src/: lib.rs  state.rs
programs/cubik-hackathon/src/instructions/: crate_participant_nft.rs  create_collection.rs  create_participant_nft.rs  hackathon_init.rs  mod.rs  participant.rs
tests/: cubik-hackathon.ts
