[package]
name = "cubik-hackathon"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cubik_hackathon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
mpl-token-metadata = { version="1.12.0", features = [ "no-entrypoint" ] }
